--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@typeform/embed-react": "^4.1.0",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18"
