--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@typeform/embed-react": "^4.1.0",
     "next": "14.2.11",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/node": "^20",
